# xmppragma

./: CMakeLists.txt  README.txt
src/: AlignHandler.cpp  BcastHandler.cpp  DistributeHandler.cpp  LoopHandler.cpp  NodeHandler.cpp  PPAlign.cpp  PPArray.cpp  PPBarrier.cpp  PPBcast.cpp  PPDistribute.cpp  PPGmove.cpp  PPLoop.cpp  PPNode.cpp  PPNode.h  PPReduceShadow.cpp  PPReduction.cpp  PPReflect.cpp  PPShadow.cpp  PPTask.cpp  PPTasks.cpp  PPTemplate.cpp  PPTemplateFix.cpp  PPUtil.cpp  PPUtil.h  PPWaitAsync.cpp  PPclass.h  ReflectHandler.cpp  RewriteUtil.cpp  Rewriter.cpp  Rewriter.h  ShadowHandler.cpp  TaskHandler.cpp  TemplateHandler.cpp  main.cpp
test/: result.cpp  test.cpp  test2.c
